update return type